More cleanup of css, Changed spell list on character sheet from a table to a list of items. Added more information to the store page to show the price multiplier for haggling Added additional ways to increase quantity of items in a characters inventory New feature: Weapons, Natural Attacks can be drug from a PC character sheet onto the macro bar and it will create a macro shortcut for that item. This can currently only be done by players, not the GM. added all campaign qualities to the system settings, though most do not have in game functionality. conditions now correctly affect saves and skills Tainted added for corrupting magic.

--- a/templates/items/store-sheet.handlebars
+++ b/templates/items/store-sheet.handlebars
@@ -60,7 +60,7 @@
                           {{system.newCost}}
                           {{#compare system.currency "Silver" opperator="=="}}
                             <span class="tooltip remove-background"><i class="fas fa-coins">
-                              <div class="tooltiptext relative-position" >
+                              <div class="tooltiptext absolute-position" >
                                 {{localize "fantasycraft.silver"}}
                               </div>
                             </i>
@@ -68,7 +68,7 @@
                           {{/compare}}
                           {{#compare system.currency "Reputation" opperator="=="}}
                             <span class="tooltip remove-background"><i class="fas fa-star">
-                              <div class="tooltiptext relative-position" >
+                              <div class="tooltiptext absolute-position" >
                                 {{localize "fantasycraft.reputation"}}
                               </div>
                             </i>
@@ -136,7 +136,7 @@
                           {{system.newCost}}
                           {{#compare system.currency "Silver" opperator="=="}}
                             <span class="tooltip remove-background"><i class="fas fa-coins">
-                              <div class="tooltiptext relative-position" >
+                              <div class="tooltiptext absolute-position" >
                                 {{localize "fantasycraft.silver"}}
                               </div>
                             </i>
@@ -144,7 +144,7 @@
                           {{/compare}}
                           {{#compare system.currency "Reputation" opperator="=="}}
                             <span class="tooltip remove-background"><i class="fas fa-star">
-                              <div class="tooltiptext relative-position" >
+                              <div class="tooltiptext absolute-position" >
                                 {{localize "fantasycraft.reputation"}}
                               </div>
                             </i>
