--- a/templates/sheets/character-sheet.handlebars
+++ b/templates/sheets/character-sheet.handlebars
@@ -310,7 +310,7 @@
                                         <footer>{{localize "fantasycraft.studies"}}</footer>
                                     </li> 
                                     <li class="centreItems flex3">
-                                        <input type="number" class="smallBox calcBox" name="system.knowledge.misc" value="{{actor.system.knowledge.misc}}"disabled=true />
+                                        <input type="number" class="smallBox calcBox" name="system.knowledge.misc" value="{{actor.system.knowledge.misc}}" />
                                         <footer>{{localize "fantasycraft.misc"}}</footer>
                                     </li> 
                                 </ul>
