Added the Crusader Call to Arms book including class, class features, and feats Moved Eslot information onto the character class rather than hard coding. Added the ability for tricks to change damage types and stances to add damage resistance. Carrying capacity now properly effects movement speed, physical skills and defense.
Bugfixes:
Class features now correctly display their grade/number on the character sheet
Shield block, Parry, and Arrow cutting no longer fail if the character has another option with the same name.

--- a/fantasycraft.css
+++ b/fantasycraft.css
@@ -578,7 +578,7 @@
 }
 .sheet .two-column {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 50% 50%;
   min-height: 52px;
 }
 .sheet .three-column {
