--- a/less/general.less
+++ b/less/general.less
@@ -280,7 +280,7 @@
     .two-column
     {
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: 50% 50%;
         min-height: 52px;
     }
     .three-column {
